Changed tab shape for simplicity and fixed animation. Body set to overflow hidden

--- a/styles/body.css
+++ b/styles/body.css
@@ -1,3 +1,4 @@
 body {
     background-color: var(--offWhite);
+    overflow: hidden;
 }
