--- a/styles/layout.css
+++ b/styles/layout.css
@@ -42,6 +42,7 @@
 .sliderPage {
     box-sizing: border-box;
     background-color: var(--offWhite);
+    z-index: 5;
     margin-top: 3rem;
     margin-bottom: 3rem;
     margin-left: 0;
