--- a/styles/tab.css
+++ b/styles/tab.css
@@ -3,10 +3,27 @@
     left: -6rem;
     width: 10rem;
     padding-top: 13rem;
-    z-index: 999;
+    z-index: 10;
     -webkit-filter: drop-shadow( 0px 0px 5px rgba(0,0,0,0.75));
     filter: drop-shadow( 0px 0px 5px rgba(0,0,0,0.75));
 }
+
+.tabButton {
+    background-color: var(--offWhite);
+    height: 10rem;
+    width: 5rem;
+    z-index: 6;
+    position: relative;
+    top: 13rem;
+    left: -4rem;
+    -webkit-filter: drop-shadow( 0px 0px 5px rgba(0,0,0,0.75));
+    filter: drop-shadow( 0px 0px 5px rgba(0,0,0,0.75));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
 
 .tabHolder {
     width: 2rem;
