--- a/styles/typography.css
+++ b/styles/typography.css
@@ -37,9 +37,9 @@ h2 {
 }
 
 .tabText {
-    position: relative;
+    /* position: relative;
     left: -2.5rem;
-    bottom: 7rem;
+    bottom: 7rem; */
     text-align: center;
     z-index: 999;
     font-family: 'Bebas Neue', sans-serif;
